--- a/cvtemplate/src/index.html
+++ b/cvtemplate/src/index.html
@@ -12,6 +12,9 @@
         <%= htmlWebpackPlugin.options.myBanner %>
             <main id="main">
         <%= htmlWebpackPlugin.options.myAbout %>
+        <%= htmlWebpackPlugin.options.myExp %>
+        <%= htmlWebpackPlugin.options.myPort %>
+
         <%= htmlWebpackPlugin.options.myContact %>
 
             </main>
