--- a/cvtemplate/src/index.html
+++ b/cvtemplate/src/index.html
@@ -14,6 +14,8 @@
         <%= htmlWebpackPlugin.options.myAbout %>
         <%= htmlWebpackPlugin.options.myExp %>
         <%= htmlWebpackPlugin.options.myPort %>
+        <%= htmlWebpackPlugin.options.GitHubAPI %>
+
 
         <%= htmlWebpackPlugin.options.myContact %>
 
